# quantis

./: .gitignore  Cargo.toml  cargo_toml_additions.txt  docker-compose-dev.yml  docker-compose.yml  quantis_presentation_modifie.pptx
migrations/: 001_init.sql  002_places.sql  003_consumptions.sql  003_energy_type.sql  004_consumptions.sql  004_energy_type.sql  005_place_goals.sql  006_consumptions_day_upsert.sql  007_user_profile_alerts.sql  008_alert_dispatches.sql  009_password_reset_tokens.sql
nginx/: default.conf
src/: main.rs
web/: Register.html  add-data.html  dashboard-old.html  dashboard.html  forgot-password.html  hist.html  index.html  login.html  oldindex.html  profil.html  register.html  reset-password.html
web/css/: add-consumption.css  dash.css  historique.css  home.css  log.css  profil.css
web/css/shared/: base.css  components.css  header.css  ui.css
web/js/: main.js  profile.js
web/js/js/: main.js
