[package]
name = "consumption-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"

jsonwebtoken = "9"
time = "0.3"

uuid = { version = "1", features = ["v4", "serde"] }
